--- a/Registration.html
+++ b/Registration.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Palanquin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Registration.css">
-    <title>Document</title>
+    <title>registration</title>
 </head>
 <body>
-    <section class="top-nav">
+    <header class="top-nav">
         <div class="logo">
             <img src="img/img/2626372-removebg-preview (1).png">
         </div>
@@ -21,7 +21,7 @@
             <li> <a href="courses.html">Courses</a></li>
             <li> <a href="Registration.html">Registration</a></li>
         </ul>
-    </section>
+    </header>
     <div class="pricing-plan">
         <h1 class="centered-h1">PERSONAL <span class="PROGRAMS">PROGRAMS</span></h1>  
         <div class="container">
