--- a/Registration.html
+++ b/Registration.html
@@ -5,95 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Palanquin&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Registration.css">
-    <title>registration</title>
+    <title>Registration</title>
 </head>
 <body>
     <header class="top-nav">
         <div class="logo">
-            <img src="img/img/2626372-removebg-preview (1).png">
+            <img src="img/img/2626372-removebg-preview (1).png" alt="Logo">
         </div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-button-container">
             <div class="menu-button"></div>
         </label>
         <ul class="menu">
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="courses.html">Courses</a></li>
-            <li> <a href="Registration.html">Registration</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="Registration.html">Registration</a></li>
         </ul>
     </header>
+
     <div class="pricing-plan">
         <h1 class="centered-h1">PERSONAL <span class="PROGRAMS">PROGRAMS</span></h1>  
         <div class="container">
-        <div class="plan">
-            <div class="icon">
-                <img src="img/img/Group 11.png" alt="Icon">
+            <div class="plan">
+                <div class="icon">
+                    <img src="img/img/Group 11.png" alt="Icon">
+                </div>
+                <div class="details">
+                    <p class="duration">6 Months</p>
+                    <p class="price">30$/Month</p>
+                    <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
+                    <p class="description"><span class="mark">&#10007;</span> Personal Trainer</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Free shower</p>
+                    <button class="button">Select</button>
+                </div>
             </div>
-            <div class="details">
-               <p class="duration">6 Months</p>
-               <p class="price">30$/Month</p>
-               <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
-               <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
-               <p class="description"><span class="mark">&#10007;</span>Personal Trainer </p>
-               <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
-               <p class="description"> <span class="mark">&#10003;</span> Free shower </p>
-               <button class="button">Select</button>
+            <div class="plan">
+                <div class="icon">
+                    <img src="img/img/Group 11.png" alt="Icon">
+                </div>
+                <div class "details">
+                    <p class="duration">12 Months</p>
+                    <p class="price">20$/Month</p>
+                    <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
+                    <p class="description"><span class="mark">&#10003;</span> Personal Trainer</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Free shower</p>
+                    <button class="button">Select</button>
+                </div>
             </div>
         </div>
-        <div class="plan">
-            <div class="icon">
-                <img src="img/img/Group 11.png" alt="Icon">
+    </div>
+
+    <div class="pricing-plan">
+        <h1 class="centered-h1">GROUPING <span class="PROGRAMS">PROGRAMS</span></h1>  
+        <div class="container">
+            <div class="plan">
+                <div class="icon">
+                    <img src="img/img/Group 11.png" alt="Icon">
+                </div>
+                <div class="details">
+                    <p class="duration">6 Months</p>
+                    <p class="price">30$/Month</p>
+                    <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
+                    <p class="description"><span class="mark">&#10007;</span> Personal Trainer</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Free shower</p>
+                    <button class="button">Select</button>
+                </div>
             </div>
-            <div class="details">
-                <p class="duration">12 Months</p>
-                <p class="price">20$/Month</p>
-                <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
-                <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
-                <p class="description"><span class="mark">&#10003;</span>Personal Trainer </p>
-                <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
-                <p class="description"> <span class="mark">&#10003;</span> Free shower </p>
+            <div class="plan">
+                <div class="icon">
+                    <img src="img/img/Group 11.png" alt="Icon">
+                </div>
+                <div class="details">
+                    <p class="duration">12 Months</p>
+                    <p class="price">20$/Month</p>
+                    <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
+                    <p class="description"><span class="mark">&#10003;</span> Personal Trainer</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
+                    <p class="description"> <span class="mark">&#10003;</span> Free shower</p>
+                </div>
                 <button class="button">Select</button>
             </div>
         </div>
     </div>
-</div>
-    <div class="pricing-plan">
-        <h1 class="centered-h1">GROUPING <span class="PROGRAMS">PROGRAMS</span></h1>  
-        <div class="container">
-        <div class="plan">
-            <div class="icon">
-                <img src="img/img/Group 11.png" alt="Icon">
-            </div>
-            <div class="details">
-               <p class="duration">6 Months</p>
-               <p class="price">30$/Month</p>
-               <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
-               <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
-               <p class="description"><span class="mark">&#10007;</span>Personal Trainer </p>
-               <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
-               <p class="description"> <span class="mark">&#10003;</span> Free shower </p>
-               <button class="button">Select</button>
 
-            </div>
-        </div>
-        <div class="plan">
-            <div class="icon">
-                <img src="img/img/Group 11.png" alt="Icon">
-            </div>
-            <div class="details">
-                <p class="duration">12 Months</p>
-                <p class="price">20$/Month</p>
-                <p class="description"> <span class="mark">&#x2713;</span> Free Riding</p>
-                <p class="description"> <span class="mark">&#10003;</span> Unlimited Equipments</p>
-                <p class="description"><span class="mark">&#10003;</span>Personal Trainer </p>
-                <p class="description"> <span class="mark">&#10003;</span> Weight Losing Classes</p>
-                <p class="description"> <span class="mark">&#10003;</span> Free shower </p>
-                
-            </div>
-            <button class="button">Select</button>
-        </div>
-    </div>
-</div>
     <div class="ContactUs">
         <h1 class="centered-h1">SUBSCRIBE <span class="PROGRAMS">NOW</span></h1>  
         <form onsubmit="return validateForm();">
@@ -113,20 +114,18 @@
         </form>
     </div>
     
-    </div>
     <footer>
-        <div class="socialIcons ">
-            <a href="https://www.facebook.com"><img src="img/img/facebook (1) 1.png"></a>
-            <a href="mailto:your@email.com"> <img src="img/img/gmail (2) 1.png"></a>
-            <a href="https://www.google.com/maps"> <img src="img/img/location (2) 1.png"></a>
-            <a href="https://api.whatsapp.com/send?phone=123456789"> <img src="img/img/phone-call 1.png"></a>
+        <div class="socialIcons">
+            <a href="https://www.facebook.com"><img src="img/img/facebook (1) 1.png" alt="Facebook"></a>
+            <a href="mailto:your@email.com"><img src="img/img/gmail (2) 1.png" alt="Email"></a>
+            <a href="https://www.google.com/maps"><img src="img/img/location (2) 1.png" alt="Location"></a>
+            <a href="https://api.whatsapp.com/send?phone=123456789"><img src="img/img/phone-call 1.png" alt="Phone"></a>
         </div>
         <div class="copyright">
             &copy; 2023 Your Company Name. All rights reserved.
         </div>
-</footer>
+    </footer>
 
     <script src="script.js"></script>
-
 </body>
 </html>
