--- a/courses.html
+++ b/courses.html
@@ -7,84 +7,85 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Palanquin&display=swap" rel="stylesheet">
-    <title>courses</title>
+    <title>Courses</title>
 </head>
 <body>
     <section class="top-nav">
         <div class="logo">
-            <img src="img/img/2626372-removebg-preview (1).png">
+            <img src="img/img/2626372-removebg-preview (1).png" alt="Logo">
         </div>
         <input type="checkbox" id="menu-toggle">
         <label for="menu-toggle" class="menu-button-container">
             <div class="menu-button"></div>
         </label>
         <ul class="menu">
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="courses.html">Courses</a></li>
-            <li> <a href="Registration.html">Registration</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="Registration.html">Registration</a></li>
         </ul>
     </section>
-          
-    <h1 class="centered-h1">PERSONAL <span class="PROGRAMS">PROGRAMS</span></h1>  
-            <div class="container">
-                <div class="image">
-                    <img src="img/img/18.png" >
-                    <div class="title">Bodyweight</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/14.png">
-                    <div class="title">Pull Up</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/strong-tattooed-white-unlabeled-tank-t-shirt-male-athlete-shows-calisthenic-moves-holding-l-sit-position-parallel-bars (1) 1.png">
-                    <div class="title">Master the Planche</div>
-                    <button class="read-more">Read More</button>
-                </div>
+    <section class="Courses">
+        <h1 class="centered-h1">PERSONAL <span class="PROGRAMS">PROGRAMS</span></h1>  
+        <div class="container">
+            <div class="image">
+                <img src="img/img/18.png" alt="Bodyweight">
+                <div class="title">Bodyweight</div>
+                <button class="read-more">Read More</button>
             </div>
-            <h1 class="centered-h1">GROUPING <span class="PROGRAMS">PROGRAMS</span></h1>  
-            <div class="container">
-                <div class="image">
-                    <img src="img/img/11.png" >
-                    <div class="title">Cardio  Together</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/12.png">
-                    <div class="title">Cycle Together</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/13.png">
-                    <div class="title">Core Focus</div>
-                    <button class="read-more">Read More</button>
-                </div>
+            <div class="image">
+                <img src="img/img/14.png" alt="Pull Up">
+                <div class="title">Pull Up</div>
+                <button class="read-more">Read More</button>
             </div>
-            <h1 class="centered-h1">OLD PEOPLE <span class="PROGRAMS">PROGRAMS</span></h1>  
-            <div class="container">
-                <div class="image">
-                    <img src="img/img/15 (1).png" >
-                    <div class="title">Moving For  Balance</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/16.png">
-                    <div class="title">Enhance&Fitness</div>
-                    <button class="read-more">Read More</button>
-                </div>
-                <div class="image">
-                    <img src="img/img/10.png">
-                    <div class="title">Seniors Improving</div>
-                    <button class="read-more">Read More</button>
-                </div>
+            <div class="image">
+                <img src="img/img/strong-tattooed-white-unlabeled-tank-t-shirt-male-athlete-shows-calisthenic-moves-holding-l-sit-position-parallel-bars (1) 1.png" alt="Master the Planche">
+                <div class="title">Master the Planche</div>
+                <button class="read-more">Read More</button>
             </div>
+        </div>
+        <h1 class="centered-h1">GROUPING <span class="PROGRAMS">PROGRAMS</span></h1>  
+        <div class="container">
+            <div class="image">
+                <img src="img/img/11.png" alt="Cardio Together">
+                <div class="title">Cardio Together</div>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="image">
+                <img src="img/img/12.png" alt="Cycle Together">
+                <div class="title">Cycle Together</div>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="image">
+                <img src="img/img/13.png" alt="Core Focus">
+                <div class="title">Core Focus</div>
+                <button class="read-more">Read More</button>
+            </div>
+        </div>
+        <h1 class="centered-h1">OLD PEOPLE <span class="PROGRAMS">PROGRAMS</span></h1>  
+        <div class="container">
+            <div class="image">
+                <img src="img/img/15 (1).png" alt="Moving For Balance">
+                <div class="title">Moving For Balance</div>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="image">
+                <img src="img/img/16.png" alt="Enhance&Fitness">
+                <div class="title">Enhance & Fitness</div>
+                <button class="read-more">Read More</button>
+            </div>
+            <div class="image">
+                <img src="img/img/10.png" alt="Seniors Improving">
+                <div class="title">Seniors Improving</div>
+                <button class="read-more">Read More</button>
+            </div>
+        </div>
+    </section>  
     <footer>
-        <div class="socialIcons ">
-            <a href="https://www.facebook.com"><img src="img/img/facebook (1) 1.png"></a>
-            <a href="mailto:your@email.com"> <img src="img/img/gmail (2) 1.png"></a>
-            <a href="https://www.google.com/maps"> <img src="img/img/location (2) 1.png"></a>
-            <a href="https://api.whatsapp.com/send?phone=123456789"> <img src="img/img/phone-call 1.png"></a>
+        <div class="socialIcons">
+            <a href="https://www.facebook.com"><img src="img/img/facebook (1) 1.png" alt="Facebook"></a>
+            <a href="mailto:your@email.com"><img src="img/img/gmail (2) 1.png" alt="Email"></a>
+            <a href="https://www.google.com/maps"><img src="img/img/location (2) 1.png" alt="Location"></a>
+            <a href="https://api.whatsapp.com/send?phone=123456789"><img src="img/img/phone-call 1.png" alt="Phone"></a>
         </div>
         <div class="copyright">
             &copy; 2023 Your Company Name. All rights reserved.
