--- a/index.html
+++ b/index.html
@@ -7,44 +7,50 @@
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <header class="top-nav">
-        <div class="logo">
-            <img src="img/img/2626372-removebg-preview (1).png">
-        </div>
-        <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-button-container">
-            <div class="menu-button"></div>
-        </label>
-        <ul class="menu">
-            <li> <a href="index.html">Home</a></li>
-            <li> <a href="courses.html">Courses</a></li>
-            <li> <a href="Registration.html">Registration</a></li>
-        </ul>
-    </header>
+  <header class="top-nav">
+    <div class="logo">
+      <img src="img/img/2626372-removebg-preview (1).png" alt="Logo">
+    </div>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-button-container">
+      <div class="menu-button"></div>
+    </label>
+    <ul class="menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="courses.html">Courses</a></li>
+      <li><a href="Registration.html">Registration</a></li>
+    </ul>
+  </header>
   <section class="Home">
     <div class="Home-text">
-      <h3>HI THIS IS FITNESS & GYM</h3>
-      <h3>ARE YOU READY FOR THE CHALLENGES ?</h3>
+      <h3>HI THIS IS FITNESS & GYM </h3><br>
+      <h3>ARE YOU READY FOR THE CHALLENGES?</h3><br>
       <h3>MORE THAN +100 MEMBERS ARE HERE</h3>
-      <a class="button-59">Our Courses</a>
     </div>
-        <div class="FAQ">
-          <h1>FAQ</h1>
-          <div class="Q">
-            <div class="Q-1">
-              <p>Is Members Fee refundable? </p>
-            </div>
-            <div class="Q-2">
-              <p>How Often Should I Rest?</p>
-            </div>
-            <div class="Q-3">
-              <p>How Often Should I Rest?</p>
-            </div>
-            <div class="Q-4">
-              <p>How Often Should I Rest?</p>
-            </div>
-          </div>
-        </div>
+      <a class="button-59" href="courses.html">Our Courses</a>
+  </div>
   </section>
+  <section class="FAQ">
+    <h1>FAQ</h1>
+    <div class="Q">
+      <div class="Q-1">
+        <h4>Is Members Fee refundable?</h4>
+        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      </div>
+      <div class="Q-2">
+        <h4>How Often Should I Rest?</h4>
+        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      </div>
+      <div class="Q-3">
+        <h4>How Often Should I Rest?</h4>
+        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      </div>
+      <div class="Q-4">
+        <h4>How Often Should I Rest?</h4>
+        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      </div>
+    </div>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
