--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
   <section class="FAQ">
     <h1>FAQ</h1>
     <div class="Q">
-      <div class="Q-1">
+      <div class="faq">
         <h4>Is Members Fee refundable?</h4>
-        <P class="answer">Lorem ipsum dolor sit amet.</P>
+        <p class="answer">Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="Q-2">
-        <h4>How Often Should I Rest?</h4>
-        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      <div class="faq">
+        <h4>Is Members Fee refundable?</h4>
+        <p class="answer">Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="Q-3">
-        <h4>How Often Should I Rest?</h4>
-        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      <div class="faq">
+        <h4>Is Members Fee refundable?</h4>
+        <p class="answer">Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="Q-4">
-        <h4>How Often Should I Rest?</h4>
-        <P class="answer">Lorem ipsum dolor sit amet.</P>
+      <div class="faq">
+        <h4>Is Members Fee refundable?</h4>
+        <p class="answer">Lorem ipsum dolor sit amet.</p>
       </div>
     </div>
   </section>
