--- a/index.html
+++ b/index.html
@@ -47,10 +47,21 @@
       </div>
       <div class="faq">
         <h4>Is Members Fee refundable?</h4>
-        <p class="answer">Lorem ipsum dolor sit amet.</p>
+        <p class="answer">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. A tempore magni velit!.</p>
       </div>
     </div>
   </section>
+  <footer>
+    <div class="socialIcons">
+        <a href="https://www.facebook.com"><img src="img/img/facebook (1) 1.png" alt="Facebook"></a>
+        <a href="mailto:your@email.com"><img src="img/img/gmail (2) 1.png" alt="Email"></a>
+        <a href="https://www.google.com/maps"><img src="img/img/location (2) 1.png" alt="Location"></a>
+        <a href="https://api.whatsapp.com/send?phone=123456789"><img src="img/img/phone-call 1.png" alt="Phone"></a>
+    </div>
+    <div class="copyright">
+        &copy; 2023 Your Company Name. All rights reserved.
+    </div>
+</footer>
   <script src="script.js"></script>
 </body>
 </html>
