--- a/Registration.html
+++ b/Registration.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Goldman&family=Palanquin&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Piazzolla:opsz@8..30&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Registration.css">
+
     <title>Registration</title>
 </head>
 <body>
