--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
             </div>
             <div class="image">
                 <img src="img/img/strong-tattooed-white-unlabeled-tank-t-shirt-male-athlete-shows-calisthenic-moves-holding-l-sit-position-parallel-bars (1) 1.png" alt="Master the Planche">
-                <div class="title">Master the Planche</div>
+                <div class="title"> the Planche</div>
                 <button class="read-more">Read More</button>
             </div>
         </div>
