add a new thing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="top-nav">
@@ -35,19 +38,30 @@
     <div class="Q">
       <div class="faq">
         <h4>Is Members Fee refundable?</h4>
-        <p class="answer">Lorem ipsum dolor sit amet.</p>
+        <p class="answer">Membership fees are non-refundable, but we offer
+           flexible membership durations to fit your needs. 
+          Please refer to our terms and conditions for more information.</p>
       </div>
       <div class="faq">
-        <h4>Is Members Fee refundable?</h4>
-        <p class="answer">Lorem ipsum dolor sit amet.</p>
+        <h4>How Often Should I Rest?</h4>
+        <p class="answer">Rest days are crucial for recovery and injury prevention. 
+          In general, aim for at least one to two rest days per week,
+           but adjust based on your specific fitness goals and body's needs.</p>
       </div>
       <div class="faq">
-        <h4>Is Members Fee refundable?</h4>
-        <p class="answer">Lorem ipsum dolor sit amet.</p>
+        <h4> Can you exercise too much?</h4>
+        <p class="answer">Excessive exercise can lead to overtraining, 
+          potentially causing physical and mental health problems. Maintain 
+          a balanced workout routine and pay attention to your body's signals
+           for optimal results.</p>
       </div>
       <div class="faq">
-        <h4>Is Members Fee refundable?</h4>
-        <p class="answer">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. A tempore magni velit!.</p>
+        <h4>How often should I exercise?</h4>
+        <p class="answer">For general fitness, aim for 
+          at least 150 minutes of moderate-intensity or
+           75 minutes of vigorous-intensity aerobic activity each week,
+            along with two days of strength training.Adjust based on your specific
+             goals and fitness level.</p>
       </div>
     </div>
   </section>
